--- a/open/index.html
+++ b/open/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
 
     <meta name="keywords"
-      content="Facets, Facets!, Big Tent Games, Games, Causual game, Puzzle game, Word game, Boardgame, Wil Voss" />
+      content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:title" content="Facets!" />
