--- a/game/stats.html
+++ b/game/stats.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
 
     <meta name="keywords"
-      content="Facets, Facets!, Big Tent Games, Games, Causual game, Puzzle game, Word game, Boardgame, Wil Voss" />
+      content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description" content="Statistics on Facets: A Puzzle Game of Words and Wits!." />
 
     <link rel="apple-touch-icon" sizes="120x120" href="../images/icon180.png" />
