--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.59" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.60" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.59" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.59" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.59" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.60" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.60" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.60" media="screen" />
   </head>
 
   <body>
@@ -147,9 +147,9 @@
         <p class="pointer-text" v-html="pointerText"></p>
         <p class="controls">
           <a v-if="isPlayerGuessing"
-            @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length">{{appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1 ? 'Stop showing tips' : 'OKAY'}}</a>
+            @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length; appStateFirstRunCreatingIndex = appDataCreatorFirstRunItems.length">{{appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length - 1 ? 'Stop showing tips' : 'OKAY'}}</a>
           <a v-if="isPlayerCreating"
-            @click="appStateFirstRunCreatingIndex = appDataCreatorFirstRunItems.length">{{appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length - 1 ? 'Stop showing tips' : 'OKAY'}}</a>
+            @click="appStateFirstRunGuessingIndex = appDataGuessingFirstRunItems.length; appStateFirstRunCreatingIndex = appDataCreatorFirstRunItems.length">{{appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length - 1 ? 'Stop showing tips' : 'OKAY'}}</a>
         </p>
       </pointer>
       <arrow
@@ -785,15 +785,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.59" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.59" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.59" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.59" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.59" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.59" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.59" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.60" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.60" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.60" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.60" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.60" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.60" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.60" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.59" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.60" type="text/javascript"></script>
   </body>
 
 </html>
