--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.62" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.64" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.62" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.62" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.62" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.64" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.64" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.64" media="screen" />
   </head>
 
   <body>
@@ -611,9 +611,9 @@
             Today's Facet!</button>
         </header>
         <controls :class="{disabled: getActionButtonState, pointoutparent: (appStateFirstRunGuessingIndex === 4 &&
-          isGuessingFirstRunShowing) || (appStateFirstRunCreatingIndex === 3 && isPlayerCreating)}">
+          isGuessingFirstRunShowing) || (appStateFirstRunCreatingIndex === 4 && isPlayerCreating)}">
           <button id="shareButton" class="inline" :class="{pointout: (appStateFirstRunGuessingIndex === 4 &&
-            isPlayerGuessing) || (appStateFirstRunCreatingIndex === 3 && isPlayerCreating)}"
+            isPlayerGuessing) || (appStateFirstRunCreatingIndex === 4 && isPlayerCreating)}"
             @click="HandleSubmitButtonPress()">
             <icon :class="{show: appStateIsGettingTinyURL}" class="spinner"></icon>
             <span v-if="!appStateIsGettingTinyURL" v-html="getSubmitButtonText"></span>
@@ -627,7 +627,7 @@
           </button>
           <button aria-label="Rotate Tray Anti-Clockwise" class="anticlockwise" @click="RotateTray(-1)">
             <icon :class="{pointout: appStateFirstRunGuessingIndex === 3 &&
-              isPlayerGuessing || appStateFirstRunCreatingIndex === 2 && isPlayerCreating}" class="rotate"></icon>
+              isPlayerGuessing || appStateFirstRunCreatingIndex === 3 && isPlayerCreating}" class="rotate"></icon>
           </button>
         </rotators>
         <input autocomplete="off"
@@ -643,7 +643,8 @@
             </words>
           </card>
         </ghost>
-        <parking v-if="!appStateUsePortraitLayout">
+        <parking v-if="!appStateUsePortraitLayout"
+          :class="{pointout: (isPlayerCreating && appStateFirstRunCreatingIndex === 5)}">
           <spot v-for="(card, index) in appDataCardsParked" v-if="index < (currentGameGuessingCardCount / 2)"
             :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: index === 0 && card.words.length !== 0 && appStateFirstRunGuessingIndex === 0 && !appStateIsDragging}">
             <rotators>
@@ -676,12 +677,12 @@
         <tray id="tray" :class="{rotating: appStateTrayIsRotating}"
           :style=" {rotate: appStateTrayRotation * 90 + 'deg' }">
           <diamond class="back"></diamond>
-          <diamond :class="{pointout: (appStateFirstRunCreatingIndex === 1 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 &&
-            isGuessingFirstRunShowing) || (isPlayerCreating && appStateFirstRunCreatingIndex === 4)}"></diamond>
+          <diamond :class="{pointout: (appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 &&
+            isPlayerGuessing)}"></diamond>
           <hints>
             <hint @pointerdown=" RotateTrayBasedOnInputFocus(index)" :id="'h' + index"
               v-for="(hint, index) in appDataHints" :key="index"
-              :class="{pointout: (appStateFirstRunCreatingIndex === 1 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 && isPlayerGuessing)}">
+              :class="{pointout: (appStateFirstRunCreatingIndex === 2 && isPlayerCreating) || (appStateFirstRunGuessingIndex === 2 && isPlayerGuessing)}">
               <input autocomplete="off" autocapitalize="off" autocomplete="off" spellcheck="false" :id="'hint' + index"
                 type="text" title="Please only use alphanumeric characters." pattern="[A-Za-z0-9]*"
                 :disabled="appStateIsGuessing || index > 0" v-model="hint.value" maxlength="14" type="text"
@@ -690,7 +691,7 @@
           </hints>
           <cards :class="{disabled: appStateIsModalShowing}">
             <spot v-for="(card, index) in appDataCards" v-if="!card.isExtra"
-              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout: appStateIsGuessing && appStateFirstRunGuessingIndex === 1 && card.words.length > 0}">
+              :class="{wrong: card.failedCheckAlready && !card.isRotating, empty: card.words.length === 0, selected: card.isSelected, pointout: (appStateIsGuessing && appStateFirstRunGuessingIndex === 1 && card.words.length > 0) || (appStateFirstRunCreatingIndex === 1 && isPlayerCreating)}">
               <rotators v-if="appStateIsGuessing && currentGameSolutionGuessing !== currentGameSolutionActual">
                 <button aria-label="Rotate Tray Clockwise" class="clockwise" @click="RotateCard(event, card, 1)">
                   <icon class="rotate"></icon>
@@ -758,7 +759,7 @@
         </button>
         <parking id="parking">
           <spot v-for="(card, index) in appDataCardsParked" v-if="index < currentGameGuessingCardCount"
-            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: appStateIsGuessing && !appStateIsDragging && appStateFirstRunGuessingIndex === 0 && card.words.length !== 0}">
+            :class="{empty: card.words.length === 0, selected: card.isSelected, pointout: (appStateIsGuessing && !appStateIsDragging && appStateFirstRunGuessingIndex === 0 && card.words.length !== 0) || (isPlayerCreating && appStateFirstRunCreatingIndex === 5)}">
             <rotators v-if="!userSettingsShowAllCards">
               <button aria-label="Rotate Tray Clockwise" class="clockwise" @pointerdown="RotateCard(event, card, 1)">
                 <icon class="rotate"></icon>
@@ -792,15 +793,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.62" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.62" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.62" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.62" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.62" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.62" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.62" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.64" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.64" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.64" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.64" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.64" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.64" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.64" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.62" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.64" type="text/javascript"></script>
   </body>
 
 </html>
