--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.67" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.68" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,14 +32,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.67" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.67" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.67" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.68" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.68" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.68" media="screen" />
   </head>
 
   <body>
     <app id="app" v-cloak
-      :class="{ai: getIsAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing &&  currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
+      :class="{ai: getIsAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing && currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
       @pointerdown="HandleBodyPointerDown(event)"
       @pointerup="HandleBodyPointerUp(event, appStateIsDragging ? appDataDraggedCard : getSelectedCard)">
       <preload v-if="appStatePageHasLoaded">
@@ -145,7 +145,7 @@
           <!-- </leftright> -->
         </subtitle>
       </notification>
-      <pointer :class="{hidden: showPointer, inplay: pointerInPlay}"
+      <pointer :class="{hidden: hidePointer, inplay: pointerInPlay}"
         :style="{left: appStatePointerLocation.left + 'px', top: appStatePointerLocation.top + 'px'}">
         <p class="pointer-text" v-html="pointerText"></p>
         <p class="controls">
@@ -160,7 +160,7 @@
         </p>
       </pointer>
       <arrow
-        :class="{hidden: showPointer, inplay: (appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length && isPlayerGuessing) || (appStateFirstRunCreatingIndex > 0 && appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length && isPlayerCreating)}"
+        :class="{hidden: hidePointer, inplay: (appStateFirstRunGuessingIndex > 0 && appStateFirstRunGuessingIndex < appDataGuessingFirstRunItems.length && isPlayerGuessing) || (appStateFirstRunCreatingIndex > 0 && appStateFirstRunCreatingIndex < appDataCreatorFirstRunItems.length && isPlayerCreating)}"
         :style="{left: appStatePointerArrowLocation.x + 'px', top: appStatePointerArrowLocation.y + 'px', transform: 'translate(-10px, 2px) rotate(' +  appStatePointerArrowLocation.rotate + 'deg)'}">
       </arrow>
       <modal v-if="appStateShowTutorial" class="tutorial">
@@ -793,15 +793,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.67" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.67" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.67" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.67" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.67" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.67" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.67" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.68" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.68" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.68" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.68" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.68" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.68" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.68" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.67" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.68" type="text/javascript"></script>
   </body>
 
 </html>
