--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.68" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.69" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.68" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.68" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.68" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.69" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.69" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.69" media="screen" />
   </head>
 
   <body>
@@ -132,8 +132,7 @@
           <button class="small" @click="ToggleShowTutorial(event)">How to play</button>
           <!-- <leftright> -->
           <button class="small" @click="ShowSettings(event)">Settings</button>
-          <button class="small" style="position: absolute; bottom: 10px; right: 0px; width: auto; border: none"
-            @click="ToggleShowInfo(event)">
+          <button class="small isolated" style="bottom: 10px; right: 0px; " @click="ToggleShowInfo(event)">
             <icon class="meeples"></icon>
           </button>
           <!-- </leftright> -->
@@ -793,15 +792,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.68" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.68" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.68" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.68" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.68" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.68" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.68" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.69" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.69" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.69" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.69" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.69" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.69" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.69" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.68" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.69" type="text/javascript"></script>
   </body>
 
 </html>
