--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.70" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.71" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -32,9 +32,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.70" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.70" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.70" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.71" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.71" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.71" media="screen" />
   </head>
 
   <body>
@@ -117,8 +117,8 @@
           :class="{show: appStateIsGettingLast10Games || appStateIsGettingDailyGames || appStateIsGettingDailyGameStats}"
           style="position: relative" class="spinner"></icon>
         <subtitle>
-          <button v-if="currentGameSolutionGuessing !== currentGameSolutionActual" class="blink"
-            @click="ToggleShowMeta(event)">Resume</button>
+          <button v-if="(currentGameSolutionGuessing !== currentGameSolutionActual) || appStateUserHasCreatedAGame"
+            class="resume blink" @click="ToggleShowMeta(event)">{{resumeText}}</button>
           <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
             The Daily Facet
             <badge :class="{show: getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
@@ -338,41 +338,37 @@
             matches
             on all your browsers. Write this ID down before changing it.</small>
           <h3>Appearance</h3>
-          <checkbox :class="{on: tempUserSettingsUsesLightTheme}" @click="ToggleTempUseLightTheme()">
-            Light theme
-            <toggle></toggle>
+          <checkbox v-if="!appStateUseFlower" :class="{on: tempUserSettingsUsesLightTheme}"
+            @click="ToggleTempUseLightTheme()">
+            Light theme <toggle></toggle>
           </checkbox>
-          <small>Enable this if you want a brighter, lighter visual experience.</small>
-          <checkbox :class="{on: tempUseWordSetThemes}" @click="ToggleTempUseWordSetThemes()">
-            Category backgrounds
-            <toggle></toggle>
+          <small v-if="!appStateUseFlower">Enable this if you want a brighter, lighter visual experience.</small>
+          <checkbox :class="{on: !tempUseWordSetThemes}" @click="ToggleTempUseWordSetThemes()">
+            Hide backgrounds <toggle></toggle>
           </checkbox>
-          <small>Enable this to display category related backgrounds.</small>
+          <small>Enable this to hide category related backgrounds.</small>
 
           <checkbox :class="{on: tempUserSettingsUsesSimplifiedTheme}" @click="ToggleTempUseSimplifiedTheme()">
-            Simple visuals
-            <toggle></toggle>
+            Simple visuals <toggle></toggle>
           </checkbox>
           <small>Enable this if you want remove the gem theme entirely. </small>
           <checkbox :class="{on: tempUserSettingsHideStats}" @click="ToggleTempHideStats()">
-            Hide stats
-            <toggle></toggle>
+            Hide stats <toggle></toggle>
           </checkbox>
           <small>Enable this if you don't want to see statistics associated with the Daily Facet.</small>
           <checkbox
             :class="{disabled: tempUserSettingsUsesSimplifiedTheme, on: !tempUseMultiColoredGems && !tempUserSettingsUsesSimplifiedTheme}"
             @click="ToggleTempUseMultiColoredGems()">
-            Monocolored gem
-            <toggle></toggle>
+            Monocolored gem <toggle></toggle>
           </checkbox>
           <small :class="{disabled: tempUserSettingsUsesSimplifiedTheme}">Enable this if you want the gem to remain
             green when you are creating, guessing, or reviewing.</small>
-          <checkbox v-if="appStateUsePortraitLayout" :class="{on: tempUserSettingsShowAllCards}"
+          <checkbox v-if="appStateUsePortraitLayout" :class="{on: !tempUserSettingsShowAllCards}"
             @click="ToggleTempShowAllCards()">
-            Shrink to fit
-            <toggle></toggle>
+            Make "parked" cards bigger <toggle></toggle>
           </checkbox>
-          <small v-if="appStateUsePortraitLayout">Enable this if you want to shrink all cards to fit on the screen.
+          <small v-if="appStateUsePortraitLayout">Enable this if you want to increase the size of the unused cards when
+            guessing.
           </small>
           <!-- <checkbox v-if="isNotificationSupported && isSyncSupported && appStateUseNotifications"
             :class="{on: tempUserWantsDailyReminder, disabled: Notification.permission === 'denied'}"
@@ -790,15 +786,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.70" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.70" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.70" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.70" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.70" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.70" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.70" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.71" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.71" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.71" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.71" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.71" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.71" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.71" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.70" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.71" type="text/javascript"></script>
   </body>
 
 </html>
