--- a/game/stats.html
+++ b/game/stats.html
@@ -15,8 +15,9 @@
     <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
 
     <meta name="keywords"
-      content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
-    <meta name="description" content="Statistics on Facets: A Puzzle Game of Words and Wits!." />
+      content="free online game, brain teaser, casual game, puzzle game, word game, word association, puzzle, social game" />
+    <meta name="description" content="Statistics on Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's
+      Daily Puzzle — brain-teasing fun without distractions!" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="../images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="../images/icon180.png" />
