--- a/open/index.html
+++ b/open/index.html
@@ -16,8 +16,9 @@
     <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
 
     <meta name="keywords"
-      content="online game, casual game, puzzle game, word game, word association, puzzle, social game" />
-    <meta name="description" content="Facets: A Puzzle Game of Words and Wits!" />
+      content="free online game, brain teaser, casual game, puzzle game, word game, word association, puzzle, social game" />
+    <meta name="description"
+      content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:title" content="Facets!" />
     <meta property="og:site_name" content="facets.bigtentgames.com" />
