--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.2.72" />
+    <link rel="manifest" href="manifest.webmanifest?2.2.73" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.2.72" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.2.72" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.72" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.2.73" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.2.73" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.2.73" media="screen" />
   </head>
 
   <body>
@@ -226,14 +226,15 @@
         <section>
           <h2>
             Facets
-            <small style="max-width: unset; font-size: 50%; padding-top: var(--defaultGap); line-height: 150%;">
-              Craft word puzzles, send each other solutions, and discover how you and your friends connect! </small>
+            <p
+              style="font-family: var(--wordFont); max-width: unset; font-size: 50%; padding-top: var(--defaultGap); line-height: 150%;">
+              Craft word puzzles, send each other solutions, and discover how you and your friends connect! </p>
           </h2>
-          <message>Welcome!</message>
-          <small style="text-align: center; color: hsl(var(--appForegroundHSL))">What's your
-            name?</small>
+          <message style="text-align: center; line-height: 150%;">
+            <greeting>Welcome!</greeting> What's your player name?
+          </message>
           <input autocomplete="off" style="text-align: center" spellcheck="false" maxlength="14" id="nameInput"
-            placeholder="_ _ _ _ _ _" v-model="tempName" />
+            placeholder="_ _ _ _ _ _ _ _ _ _ _ _ _" v-model="tempName" />
           <checkbox v-if="isNotificationSupported && isSyncSupported && isPWAOnHomeScreen"
             :class="{on: tempUserWantsDailyReminder && Notification.permission === 'granted', disabled: !Notification.permission === 'granted'}"
             @click="ToggleTempUserWantsDailyReminder()">
@@ -787,15 +788,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.2.72" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.2.72" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.2.72" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.2.72" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.2.72" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.2.72" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.2.72" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.2.73" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.2.73" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.2.73" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.2.73" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.2.73" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.2.73" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.2.73" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.2.72" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.2.73" type="text/javascript"></script>
   </body>
 
 </html>
