--- a/open/index.html
+++ b/open/index.html
@@ -15,6 +15,8 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover, minimum-scale=1, maximum-scale=5, user-scalable=yes" />
     <meta name="theme-color" id="themeColor" content="rgb(0, 9, 15)" />
 
+    <meta name="robots" content="noindex">
+
     <meta name="keywords"
       content="free online game, brain teaser, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description"
