--- a/game/stats.html
+++ b/game/stats.html
@@ -16,7 +16,7 @@
 
     <meta name="keywords"
       content="free online game, brain teaser, casual game, puzzle game, word game, word association, puzzle, social game" />
-    <meta name="description" content="Statistics on Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's
+    <meta name="description" content="Statistics on Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's
       Daily Puzzle — brain-teasing fun without distractions!" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="../images/icon180.png" />
