--- a/game/index.html
+++ b/game/index.html
@@ -19,7 +19,7 @@
     <meta name="keywords"
       content="free online game, brain teaser, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description"
-      content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
+      content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="../images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="../images/icon180.png" />
