--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="keywords"
       content="free online game, brain teaser, casual game, puzzle game, word game, word association, puzzle, social game" />
     <meta name="description"
-      content="Facets: A free, ad-free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
+      content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.06" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.07" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="128x128" href="favicon.png" />
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.06" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.06" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.06" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.07" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.07" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.07" media="screen" />
   </head>
 
   <body>
@@ -788,15 +788,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.06" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.3.06" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.3.06" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.3.06" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.3.06" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.3.06" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.3.06" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.07" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.3.07" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.3.07" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.3.07" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.3.07" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.3.07" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.3.07" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.06" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.07" type="text/javascript"></script>
   </body>
 
 </html>
