--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="description"
       content="Facets: A free word association puzzle game. Play custom challenges with friends or take on the AI's Daily Puzzle — brain-teasing fun without distractions!" />
 
-    <link rel="manifest" href="manifest.webmanifest?2.3.21" />
+    <link rel="manifest" href="manifest.webmanifest?2.3.22" />
 
     <link rel="apple-touch-icon" sizes="120x120" href="images/icon180.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="images/icon180.png" />
@@ -33,9 +33,9 @@
     <link rel="icon alternate" type="image/png" href="favicon.png">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <link rel="stylesheet" href="styles/normalize.css?2.3.21" media="screen" />
-    <link rel="stylesheet" href="styles/main.css?2.3.21" media="screen" />
-    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.21" media="screen" />
+    <link rel="stylesheet" href="styles/normalize.css?2.3.22" media="screen" />
+    <link rel="stylesheet" href="styles/main.css?2.3.22" media="screen" />
+    <link rel="stylesheet" href="styles/checkbox.min.css?2.3.22" media="screen" />
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17112522048"></script>
@@ -51,9 +51,9 @@
 
   <body>
     <app id="app" v-cloak
-      :class="{ai: getIsAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing && currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
+      :class="{ai: isAIGenerated, multicolor: userSettingsUseMultiColoredGems, solved: appStateIsGuessing && currentGameSolutionGuessing === currentGameSolutionActual, portrait: appStateUsePortraitLayout, wallpaper: tempUseWordSetThemes, dragging: appStateIsDragging, guessing: appStateIsGuessing, simple: userSettingsUsesSimplifiedTheme, reviewing: appDataPlayerCurrent.role === 'reviewer', creating: isPlayerCreating}"
       @pointerdown="HandleBodyPointerDown(event)"
-      @pointerup="HandleBodyPointerUp(event, appStateIsDragging ? appDataDraggedCard : getSelectedCard)">
+      @pointerup="HandleBodyPointerUp(event, appStateIsDragging ? appDataDraggedCard : selectedCard)">
       <preload v-if="appStatePageHasLoaded">
         <img width="0px" height="0px" alt="preload image that can't be seen"
           :style="{backgroundImage: 'url(./images/tut-4' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg)'}" />
@@ -62,7 +62,7 @@
         <img width="0px" height="0px" alt="preload image that can't be seen"
           :style="{backgroundImage: 'url(./images/tut-7' + (userSettingsUsesLightTheme ? '-light' : '') + '.svg)'}" />
 
-        <img v-for="wordset in getEnabledWordSets" width="0px" height="0px" alt="preload image that can't be seen"
+        <img v-for="wordset in enabledWordSets" width="0px" height="0px" alt="preload image that can't be seen"
           :style="{backgroundImage: 'url('+ wordset.textureImage + ')'}" />
       </preload>
       <link rel="stylesheet"
@@ -79,41 +79,41 @@
         <icon class="logo giant"></icon>
       </splash>
       <notification @click="appStateShowNotification = false" :class="{show: appStateShowNotification}">
-        <message :title="getPlayerMessage">
-          <div v-html="getPlayerMessage"></div>
-          <small v-if="!userSettingsHideStats && getCurrentDaily && getCurrentDaily.solved" class="statlabel">
-            {{getCurrentDaily === getTodaysDaily ? 'Today\'s' :  getCurrentDaily.date}} Daily
+        <message :title="playerMessage">
+          <div v-html="playerMessage"></div>
+          <small v-if="!userSettingsHideStats && currentDaily && currentDaily.solved" class="statlabel">
+            {{currentDaily === todaysDaily ? 'Today\'s' :  currentDaily.date}} Daily
             - Global Stats
           </small>
           <stats title="Success rates for solving this puzzle"
-            v-if="!userSettingsHideStats && getCurrentDaily && getCurrentDaily.solved">
+            v-if="!userSettingsHideStats && currentDaily && currentDaily.solved">
             <stat>
               <value>
-                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.g1 ? getCurrentDaily.stats.guesscounts.g1 : '-'}}
+                {{!appStateIsGettingDailyGameStats && currentDaily.stats && currentDaily.stats.guesscounts.g1 ? currentDaily.stats.guesscounts.g1 : '-'}}
               </value>
               <small>in 1 try</small>
             </stat>
             <stat>
               <value>
-                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.g2 ? getCurrentDaily.stats.guesscounts.g2 : '-'}}
+                {{!appStateIsGettingDailyGameStats && currentDaily.stats && currentDaily.stats.guesscounts.g2 ? currentDaily.stats.guesscounts.g2 : '-'}}
               </value>
               <small>in 2 tries</small>
             </stat>
             <stat>
               <value>
-                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.beyond2 ? getCurrentDaily.stats.guesscounts.beyond2 : '-'}}
+                {{!appStateIsGettingDailyGameStats && currentDaily.stats && currentDaily.stats.guesscounts.beyond2 ? currentDaily.stats.guesscounts.beyond2 : '-'}}
               </value>
               <small>in 3+ tries</small>
             </stat>
             <stat>
               <value>
-                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.avg ? getCurrentDaily.stats.avg : '-'}}
+                {{!appStateIsGettingDailyGameStats && currentDaily.stats && currentDaily.stats.avg ? currentDaily.stats.avg : '-'}}
               </value>
               <small>tries avg</small>
             </stat>
             <stat>
               <value>
-                {{!appStateIsGettingDailyGameStats && getCurrentDaily.stats && getCurrentDaily.stats.guesscounts.quits ? getCurrentDaily.stats.guesscounts.quits : '-'}}
+                {{!appStateIsGettingDailyGameStats && currentDaily.stats && currentDaily.stats.guesscounts.quits ? currentDaily.stats.guesscounts.quits : '-'}}
               </value>
               <small>quit</small>
             </stat>
@@ -134,7 +134,7 @@
             class="resume blink" @click="ToggleShowMeta(event)">{{resumeText}}</button>
           <button v-if="vsShowDaily" class="small" @click="ToggleShowDailyGames(event)">
             The Daily Facet
-            <badge :class="{show: getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
+            <badge :class="{show: dailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
           <button class="inline small" @click="HandleNewGameClick">
             <icon class="empty"></icon>
@@ -303,13 +303,13 @@
           <h3 style="padding-top: 0px">Category</h3>
           <categories>
             <category :class="{on: set.name === tempWordSetName }" @click="tempWordSetName = set.name"
-              :class="{on: tempWordSetName === set.name}" v-for="set in getEnabledTempWordSet">{{set.name}}</category>
+              :class="{on: tempWordSetName === set.name}" v-for="set in enabledTempWordSet">{{set.name}}</category>
           </categories>
           <h3>Language</h3>
           <leftright>
             <p>Selected</p>
             <select v-model="tempUserSettingsLanguage">
-              <option v-for="option in getEnabledTempLanguages" :key="option.tag" :value="option.tag">{{ option.name }}
+              <option v-for="option in enabledTempLanguages" :key="option.tag" :value="option.tag">{{ option.name }}
               </option>
             </select>
           </leftright>
@@ -444,7 +444,7 @@
           <icon v-show="appStateIsGettingLast10Games" style="position: relative" class="spinner show"></icon>
 
           <message style="padding: calc(2 * var(--defaultGap)) 0"
-            v-if="!appStateIsGettingLast10Games && getCreatedGamesWithWordSetNames.length === 0">
+            v-if="!appStateIsGettingLast10Games && createdGamesWithWordSetNames.length === 0">
             <p>😢</p>
             <p>There are no player puzzles to display.</p>
             <button style="margin-top: 20px; border: 1px solid hsla(var(--linkColorDarkHSL), 0.75)"
@@ -452,7 +452,7 @@
           </message>
 
           <gamelinks>
-            <gamelink v-for="game in getCreatedGamesWithWordSetNames" @click="HandleOldGameClick(event, game)">
+            <gamelink v-for="game in createdGamesWithWordSetNames" @click="HandleOldGameClick(event, game)">
               <p>
                 <a href=""><small>{{game.name}}
                     {{game.useExtraCard === "true" ? '(5-cards)' : ''}}</small>{{game.hints.replace(/:/g," - ")}}</a>
@@ -504,23 +504,22 @@
           </stats>
           <icon v-show="appStateIsGettingDailyGames " style="position: relative" class="spinner show"></icon>
           <message style="padding: calc(2 * var(--defaultGap)) 0"
-            v-if="!appStateIsGettingDailyGames && getDailyGamesWithWordSetNames.length === 0">
+            v-if="!appStateIsGettingDailyGames && dailyGamesWithWordSetNames.length === 0">
             <p v-if="Navigator.online">There was an error. 😢</p>
             <p v-if="!Navigator.online">You appear to be offline. 😢</p>
             <button v-if="!Navigator.online" @click="GetDailyGames">Retry</button>
           </message>
 
           <gamelinks v-if="!appStateIsGettingDailyGames">
-            <gamelink :class="{done: game.solved, quit: game.quit}"
-              v-for="(game, index) in getDailyGamesWithWordSetNames">
+            <gamelink :class="{done: game.solved, quit: game.quit}" v-for="(game, index) in dailyGamesWithWordSetNames">
               <p @click="HandleGameLinkClick(event, game)">
                 <a>
                   <small>
                     <dot
-                      v-if="index === 0 && getTodaysDaily !== getCurrentDaily && game.guesses === 0 && getDailyIsFreshToday || game.guesses === 0 && !HasUserStartedGame(game)">
+                      v-if="index === 0 && todaysDaily !== currentDaily && game.guesses === 0 && dailyIsFreshToday || game.guesses === 0 && !HasUserStartedGame(game)">
                       •</dot>
                     <icon v-if="game.solved" class="eye tiny"></icon>
-                    {{game === getTodaysDaily ? 'Today' : game.date}}
+                    {{game === todaysDaily ? 'Today' : game.date}}
                   </small>
                   <clues> {{game.hints.replace(/:/g," - ")}} </clues>
                 </a>
@@ -543,7 +542,7 @@
                 </button>
               </p>
 
-              <!-- <small class="statlabel"> {{game === getTodaysDaily ? 'Today\'s' : game.date}} player counts </small> -->
+              <!-- <small class="statlabel"> {{game === todaysDaily ? 'Today\'s' : game.date}} player counts </small> -->
               <stats v-if="!userSettingsHideStats" title="Success rates for solving this puzzle">
                 <stat>
                   <value>
@@ -587,39 +586,39 @@
         <controls>
           <button class="small" id="menu" @pointerup="ToggleShowMeta(event)">
             Menu
-            <badge :class="{show:getDailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
+            <badge :class="{show:dailyIsFreshToday}">{{appDataNumberOfNewDailies}}</badge>
           </button>
         </controls>
         <header :disabled="appStateShowNotification" :class="{disabled: appStateSolving}">
           <span>
-            {{getCurrentDaily && vsShowDaily ? getCurrentDaily.key === getTodaysKey ? 'Today\'s' : getCurrentDaily.date.split(',')[0] : ''}}
+            {{currentDaily && vsShowDaily ? currentDaily.key === todaysKey ? 'Today\'s' : currentDaily.date.split(',')[0] : ''}}
           </span>
           <flogo></flogo>
-          <icon v-if="getCurrentDaily && !getCurrentDaily.solved" :class="getCorrectCalIconClass" class="large"
+          <icon v-if="currentDaily && !currentDaily.solved" :class="correctCalIconClass" class="large"
             @click="ToggleShowDailyGames(event)"></icon>
-          <icon v-if="getCurrentDaily && getCurrentDaily.solved && !getCurrentDaily.quit" class="check large"
+          <icon v-if="currentDaily && currentDaily.solved && !currentDaily.quit" class="check large"
             @click="ToggleShowDailyGames(event)"></icon>
-          <icon v-if="getCurrentDaily && getCurrentDaily.solved && getCurrentDaily.quit"
-            style="background: hsl(var(--alertHSL))" class="quit large" @click="ToggleShowDailyGames(event)"></icon>
-          <icon v-if="!getCurrentDaily" class="logo" @click="appStateShowNotification = true"></icon>
+          <icon v-if="currentDaily && currentDaily.solved && currentDaily.quit" style="background: hsl(var(--alertHSL))"
+            class="quit large" @click="ToggleShowDailyGames(event)"></icon>
+          <icon v-if="!currentDaily" class="logo" @click="appStateShowNotification = true"></icon>
           <span>
-            <count v-if="getCurrentDaily && getCurrentDaily.solved"> in {{getCurrentDaily.guesses}}
-              {{getCurrentDaily.guesses !== 1 ? 'tries' : 'try'}}
+            <count v-if="currentDaily && currentDaily.solved"> in {{currentDaily.guesses}}
+              {{currentDaily.guesses !== 1 ? 'tries' : 'try'}}
             </count>
-            <count v-if="getCurrentDaily && !getCurrentDaily.solved"> Daily </count>
+            <count v-if="currentDaily && !currentDaily.solved"> Daily </count>
           </span>
-          <button @click="HandleOldGameClick(event, getTodaysDaily)" class="dailycta"
-            :class="{show: !appStateShowNotification && vsShowDaily && getDailyIsFreshToday && appStateShowMeta, blink: appStateFirstRunGuessingIndex === -1}">Solve
+          <button @click="HandleOldGameClick(event, todaysDaily)" class="dailycta"
+            :class="{show: !appStateShowNotification && vsShowDaily && dailyIsFreshToday && appStateShowMeta, blink: appStateFirstRunGuessingIndex === -1}">Solve
             Today's Facet!</button>
         </header>
-        <controls :class="{disabled: getActionButtonState, pointoutparent: (appStateFirstRunGuessingIndex === 5 &&
+        <controls :class="{disabled: actionButtonState, pointoutparent: (appStateFirstRunGuessingIndex === 5 &&
           isPlayerGuessing) || (appStateFirstRunCreatingIndex === 4 && isPlayerCreating)}">
           <button id="shareButton" class="inline" :class="{pointout: (appStateFirstRunReviewingIndex === 2 &&
             isPlayerReviewing) || (appStateFirstRunGuessingIndex === 5 &&
             isPlayerGuessing) || (appStateFirstRunCreatingIndex === 4 && isPlayerCreating)}"
             @click="HandleSubmitButtonPress">
             <icon :class="{show: appStateIsGettingTinyURL}" class="spinner"></icon>
-            <span v-if="!appStateIsGettingTinyURL" v-html="getSubmitButtonText"></span>
+            <span v-if="!appStateIsGettingTinyURL" v-html="submitButtonText"></span>
           </button>
         </controls>
       </wrapper>
@@ -799,15 +798,15 @@
         </button>
       </wrapper>
     </app>
-    <script src="helpers/console-enhancer.js?2.3.21" type="text/javascript"></script>
-    <script src="models/LanguageObject.min.js?2.3.21" type="text/javascript"></script>
-    <script src="models/ProgressMessageObject.min.js?2.3.21" type="text/javascript"></script>
-    <script src="models/WordSetObject.min.js?2.3.21" type="text/javascript"></script>
-    <script src="models/WordObject.min.js?2.3.21" type="text/javascript"></script>
-    <script src="models/CardObject.min.js?2.3.21" type="text/javascript"></script>
-    <script src="models/PlayerObject.min.js?2.3.21" type="text/javascript"></script>
+    <script src="helpers/console-enhancer.js?2.3.22" type="text/javascript"></script>
+    <script src="models/LanguageObject.min.js?2.3.22" type="text/javascript"></script>
+    <script src="models/ProgressMessageObject.min.js?2.3.22" type="text/javascript"></script>
+    <script src="models/WordSetObject.min.js?2.3.22" type="text/javascript"></script>
+    <script src="models/WordObject.min.js?2.3.22" type="text/javascript"></script>
+    <script src="models/CardObject.min.js?2.3.22" type="text/javascript"></script>
+    <script src="models/PlayerObject.min.js?2.3.22" type="text/javascript"></script>
     <script src="helpers/vue.min.js" type="text/javascript"></script>
-    <script src="scripts/facets.js?2.3.21" type="text/javascript"></script>
+    <script src="scripts/facets.js?2.3.22" type="module" type="text/javascript"></script>
   </body>
 
 </html>
